<resources>
    <string name="app_name">Activity9</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="send">Send</string>
</resources>